# CoreNeuron

./: .buildinfo  .clang-format.changes  .cmake-format.changes.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE.txt  README.html  README.md  docs_requirements.html  doxygen.html  genindex.html  index.html  search.html  searchindex.js
.doctrees/: README.doctree  docs_requirements.doctree  doxygen.doctree  environment.pickle  index.doctree
.github/: pull_request_template.md
CMake/: CrayPortability.cmake  MakefileBuildOptions.cmake  OpenAccHelper.cmake  coreneuron-config.cmake.in
coreneuron/: CMakeLists.txt  nrnconf.h
docs/: conda_environment.yml  conf.py
doxygen/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  abort_8cpp.html  abort_8cpp_source.html  alignment_8cpp.html  alignment_8cpp.js  alignment_8cpp_source.html  annotated.html  annotated_dup.js  balance_8cpp.html  balance_8cpp_source.html  binary__report__handler_8cpp.html  binary__report__handler_8cpp_source.html  binary__report__handler_8hpp.html  binary__report__handler_8hpp_source.html  cabvars_8h.html  cabvars_8h.js  cabvars_8h_source.html  capac_8cpp.html  capac_8cpp.js  capac_8cpp_source.html  cellorder1_8cpp.html  cellorder1_8cpp.js  cellorder1_8cpp_source.html  cellorder2_8cpp.html  cellorder2_8cpp_source.html  cellorder_8cpp.html  cellorder_8cpp.js  cellorder_8cpp_source.html  cellorder_8hpp.html  cellorder_8hpp_source.html  check__constructors_8cpp.html  check__constructors_8cpp_source.html  (+831 more)
extra/sample/: na.c  (+9 more)
tests/unit/lfp/: CMakeLists.txt  lfp.cpp
(+245 files in other folders)
